Implement maestro signal related features.